# wsgi-oauth2

./: .gitignore  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  wsgioauth2.py
_sources/: index.txt
_static/: classic.css  default.css
docs/: Makefile  conf.py  index.rst  make.bat
