[metadata]
name = wsgi-oauth2
version = attr: wsgioauth2.__version__
description = Simple WSGI middleware for OAuth 2.0
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
author = Hong Minhee
author_email = hong.minhee@gmail.com
license = MIT license
url = https://dahlia.github.io/wsgi-oauth2/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware

[options]
python_requires = >=2.6, !=3.0.*, !=3.1.*, <4
py-modules =
    wsgioauth2

[aliases]
upload_doc = build_sphinx upload_doc

[bdist_wheel]
universal = 1
